--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
     dataBinding {
         enabled = true
     }
+    ndkVersion '22.1.7171670'
+    compileSdkVersion 30
 }
 
 dependencies {
