--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath "gradle.plugin.com.github.willir.rust:plugin:0.3.4"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
