--- a/app/src/main/java/com/dinaraparanid/tictactoe/native_libs/Cargo.toml
+++ b/app/src/main/java/com/dinaraparanid/tictactoe/native_libs/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2018"
 
 [dependencies]
 jni = "0.19.0"
+log = "0.4.14"
+
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.10.1"
 
 [lib]
 crate_type = ["cdylib"]
